--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -45,9 +45,10 @@
         android:src="@drawable/logo" />
 
 	<com.google.ads.AdView android:id="@+id/adView"
-            			   android:layout_width="match_parent"
-          			   	   android:layout_height="match_parent"
-          				   android:layout_alignParentBottom="true"
+         				   android:layout_width="wrap_content"
+         				   android:layout_height="wrap_content"
+         				   android:layout_centerHorizontal="true"
+         				   android:layout_alignParentBottom="true"
          		           ads:adUnitId="a151b7d83a47832"
          				   ads:adSize="BANNER" 
          				   ads:loadAdOnCreate="true" 
